# cppmpc

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  copyright.txt  pytest.ini  utils  utils.bash
cppmpc/: CodeGenerator.cpp  FastMPC.cpp  FastMPC.h  FastMPCFunctionPointerObjective.cpp  GetSymbolsVisitor.cpp  SymEngineUtilities.cpp  SymEngineUtilities.h  SymbolicInequality.cpp  SymbolicInequality.h  SymbolicObjective.cpp  SymbolicObjective.h  Util.h
cppmpc_py/: .gitignore  cppmpc.py  cppmpcPYTHON_wrap.cxx  setup.py
include/: CodeGenerator.h  FastMPC.h  FastMPCFunctionPointerObjective.h  GetSymbolsVisitor.h  OrderedSet.h  SymEngineUtilities.h  SymEngineUtilities.hpp  SymbolicEquality.h  SymbolicInequality.h  SymbolicObjective.h  SymbolicObjective.hpp  Util.h
notebooks/: Symbolic Construction.ipynb  Xeus Cling Test.ipynb
src/: CodeGenerator.cpp  FastMPC.cpp  FastMPCFunctionPointerObjective.cpp  GetSymbolsVisitor.cpp  SymEngineUtilities.cpp  SymbolicEquality.cpp  SymbolicInequality.cpp  SymbolicObjective.cpp
src/Examples/: CartPole.cpp  example1.cpp  gen_test.h
swig/: cppmpc.i
tests/: CodeGeneratorTest.cpp  EqualityConstraintTest.cpp  FastMPCFunctionPointerObjectiveTest.cpp  FastMPCSimpleObjectiveTest.cpp  GetSymbolsVisitorTest.cpp  OrderedSetTest.cpp  SymEngineUtilityTest.cpp  SymbolicObjectiveTest.cpp  SymbolicObjectiveTests.cpp  basic_wrapper_test.py  equality_constraints_test.py  ordered_set_test.py
